--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=reserve
 server.port=8080
 
+spring.jpa.hibernate.ddl-auto=update
+
+
 redis.host=localhost
 redis.port=6379
 
@@ -8,7 +11,7 @@ spring.kafka.producer.bootstrap-servers=localhost:9092
 topic.name=queueing-system-project
 
 spring.kafka.consumer.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=consumer_group01
+spring.kafka.consumer.group-id=consumer_group
 spring.kafka.consumer.auto-offset-reset=earliest
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -22,3 +25,4 @@ management.server.port=8080
 
 # Tomcat
 server.tomcat.mbeanregistry.enabled=true
+
